fixes logo spacing

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -24,7 +24,7 @@
     width: 100%;
     height: 12vh;
     margin: 0;
-    padding: 0 1rem 0 2rem;
+    padding: 0 1rem 0 0;
 
     letter-spacing: .1rem;
 
